<resources>
    <string name="app_name">P2P</string>
    <string name="main_tlTitle">在线用户</string>

    <string name="login_tvName">用户名：</string>
    <string name="login_btnLogin">登陆</string>
    <string name="login_tvTitle">P2P</string>

    <string name="main_tvScanning">扫描中...</string>
    <string name="main_tvEmpty">没有用户在线</string>
    <string name="main_connecting_success">连接成功</string>
    <string name="main_connecting_fail">连接失败</string>
    <string name="main_exit">再按一次退出聊天</string>

    <string name="chat_tvAudio_press">按住 说话</string>
    <string name="chat_tvAudio_undo">松开 结束</string>
    <string name="chat_tvAudio_cancel">松开手指，取消发送</string>
    <string name="chat_tlTitle">rain</string>
    <string name="chat_btnSend">发送</string>
    <string name="chat_audio_error">录音失败</string>
    <string name="chat_choose_file">"选择文件"</string>
    <string name="chat_send_error">发送消息失败</string>


    <string name="toast_wifi_noconnect">没有连接上Wifi</string>
    <string name="toast_wifi_connecting">"wifi连接中..."</string>
    <string name="toast_permission_rejected">"授予相关权限才能使用相应功能哦！"</string>
    <string name="toast_open_image_fail">"获取图片失败！"</string>
    <string name="toast_login_success">登陆成功</string>
    <string name="toast_login_fail">登陆失败</string>
    <string name="toast_location_fail">"定位失败"</string>
    <string name="toast_user_exit">退出聊天</string>
    <string name="toast_user_login">加入聊天</string>


    <string name="dialog_connecting">连接中...</string>
    <string name="dialog_locating">定位中...</string>
    <string name="dialog_wifi_settings">没有连接上Wifi，是否前往设置中心打开并连接上一个Wifi?</string>
    <string name="dialog_wifi_settings2">没有连接上Wifi，是否前往设置中心连接上一个Wifi?</string>
    <string name="dialog_toast">提示</string>
    <string name="dialog_positive">确认</string>
    <string name="dialog_negative">取消</string>
    <string name="dialog_audio_undo">手指上滑，取消发送</string>
    <string name="dialog_audio_cancel">松开手指，取消发送</string>
    <string name="dialog_audio_warnning">录音时间太短</string>
    <string name="popup_tvRefresh">刷新列表</string>
    <string name="popup_tvTest">关闭测试</string>


    <string name="photo_tvPhotos">所有图片</string>
    <string name="photo_tvRawPhoto">原图</string>
    <string name="photo_tvPreviewPhoto">预览</string>
    <string name="photo_tvTitle">图片</string>
    <string name="photo_tvPreviewPhoto2">预览(%d)</string>
    <string name="photo_btnSend">发送(%d/%d)</string>
    <string name="photo_max_btnSend">最多只能发送%d张图片</string>

    <string name="pre_tvIsSelect">选择</string>


</resources>
