<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:paddingStart="@dimen/dp_10"
    android:paddingEnd="@dimen/dp_10"
    android:background="@color/colorPrimary">

    <com.example.p2p.widget.customView.ShapeImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:scaleType="fitXY"
        android:src="@drawable/ic_default_user"
        android:layout_marginBottom="@dimen/dp_5"
        app:format="roundRect"
        app:corners="@dimen/dp_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_title"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tvTitle"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/colorBlack"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_name"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/colorBlack"
        android:text="@string/login_tvName"
        android:layout_marginBottom="@dimen/dp_5"
        app:layout_constraintLeft_toLeftOf="@+id/btn_login"
        app:layout_constraintBottom_toTopOf="@+id/divider"/>

    <com.example.p2p.widget.customView.ScrollEditText
        android:id="@+id/ed_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:background="@null"
        android:textSize="@dimen/sp_18"
        android:textCursorDrawable="@drawable/bg_chat_et_cursor"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
        app:layout_constraintLeft_toRightOf="@id/tv_name"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreen"
        android:layout_marginBottom="@dimen/dp_10"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btnLogin"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGreen"
        android:enabled="false"
        android:foreground="@drawable/selector_login_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>