<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreViewActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_preView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        tools:listitem="@layout/item_pre_view"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPhotoBg"
        app:contentInsetStart="@dimen/dp_0"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:src="@drawable/ic_back_white"
                android:padding="@dimen/dp_10"
                android:background="@drawable/select_photo_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_title"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_back"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1/4"/>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="@dimen/dp_65"
                android:layout_height="@dimen/dp_35"
                android:background="@drawable/select_photo_send"
                android:text="@string/chat_btnSend"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/dp_15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bottom_preView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:background="@color/colorPreViewBottomBg"
        app:layout_constraintBottom_toTopOf="@+id/divider"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#3C3B3B"
        app:layout_constraintBottom_toTopOf="@+id/cl_bottom"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPreViewBottomBg"
        android:padding="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageButton
            android:id="@+id/ib_is_raw"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:background="@drawable/select_photo_raw"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <TextView
            android:id="@+id/tv_raw_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_tvRawPhoto"
            android:textColor="@color/white"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ib_is_raw"/>

        <ImageButton
            android:id="@+id/ib_is_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/select_item_square"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_pre_view"/>

        <TextView
            android:id="@+id/tv_pre_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_tvIsSelect"
            android:textColor="@color/white"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.p2p.widget.helper.ToolbarHelper
        android:id="@+id/helper_change_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tool_bar,rv_bottom_preView,divider,cl_bottom"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>